# game_of_life_rs

./: Cargo.toml
src/: main.rs
