[package]
name = "game_of_life_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.9.0"
itertools = "0.10.5"
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
as_bool = "0.1.3"
